QRMatrix/qrmatrixextramode.h

typedef enum {
    /// none
    XModeNone,
    /// MicroQR
    XModeMicroQr,
    /// FNC1 First Position
    XModeFnc1First,
    /// FNC2 Second Position
    XModeFnc1Second
} QrmExtraMode;
typedef struct {
    /// Extra mode
    QrmExtraMode mode;
    /// A C-String represents Application Indicator for FNC1 Second Position.
    /// 2 valid forms:
    ///  - Single ASCII character [a-z][A-Z] eg. `a`.
    ///  - Two ditis number eg. `01`
    UnsignedByte* appIndicator;
    UnsignedByte appIndicatorLength;
} QrmExtraEncodingInfo;
/// Destructor
void QrmExtraDestroy(QrmExtraEncodingInfo* info);
/// Copy constructor
QrmExtraEncodingInfo QrmExtraDuplicate(QrmExtraEncodingInfo other);
/// Create none
QrmExtraEncodingInfo QrmExtraCreateNone(void);
/// Init for MicroQR or FCN1 First Position mode
QrmExtraEncodingInfo QrmExtraCreate(QrmExtraMode mode);
/// Init for FCN1 Second Positon mode
QrmExtraEncodingInfo QrmExtraCreateFnc1Second(const UnsignedByte* appId, UnsignedByte appIdLen);
typedef struct {
    /// Data segments
    QrmSegment* segments;
    /// Count of segments
    unsigned int count;
    /// Error correction info
    QrmErrorCorrectionLevel level;
    /// Optional. Limit minimum version
    /// (result version = max(minimum version, required version to fit data).
    UnsignedByte minVersion;
    /// Optional. Force to use given mask (0-7).
    /// Almost for test, you can ignore this.
    UnsignedByte maskId;
    /// Extra mode (MicroQR will be ignored. Not sure about FNC1.)
    QrmExtraEncodingInfo extraMode;
} QrmStructuredAppend;
/// Constructor
QrmStructuredAppend QrmStrAppCreate(QrmSegment* segs, unsigned int segCount, QrmErrorCorrectionLevel ecLevel);
/// Constructor
QrmStructuredAppend QrmStrAppCreateEmpty(void);
/// Copy constructor
QrmStructuredAppend QrmStrAppDuplicate(QrmStructuredAppend other);
void QrmStrAppFillSegs(QrmStructuredAppend* target, QrmSegment* segs, unsigned int segCount);
void QrmStrAppFillExtraMode(QrmStructuredAppend* target, QrmExtraEncodingInfo segs);
/// Destructor
void QrmStrAppDestroy(QrmStructuredAppend* data);