Examples/06.Flutter/lib/qrmatrixexample_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings for `src/qrmatrixexample.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class QrmatrixexampleBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  QrmatrixexampleBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  QrmatrixexampleBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void QrmBoardDestroy(
    ffi.Pointer<QrmBoard> board,
  ) {
    return _QrmBoardDestroy(
      board,
    );
  }

  late final _QrmBoardDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<QrmBoard>)>>(
          'QrmBoardDestroy');
  late final _QrmBoardDestroy =
      _QrmBoardDestroyPtr.asFunction<void Function(ffi.Pointer<QrmBoard>)>();

  QrmBoard QrmBoardDuplicate(
    QrmBoard other,
  ) {
    return _QrmBoardDuplicate(
      other,
    );
  }

  late final _QrmBoardDuplicatePtr =
      _lookup<ffi.NativeFunction<QrmBoard Function(QrmBoard)>>(
          'QrmBoardDuplicate');
  late final _QrmBoardDuplicate =
      _QrmBoardDuplicatePtr.asFunction<QrmBoard Function(QrmBoard)>();

  void QrmBoardCopy(
    ffi.Pointer<QrmBoard> board,
    QrmBoard other,
  ) {
    return _QrmBoardCopy(
      board,
      other,
    );
  }

  late final _QrmBoardCopyPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<QrmBoard>, QrmBoard)>>(
      'QrmBoardCopy');
  late final _QrmBoardCopy = _QrmBoardCopyPtr.asFunction<
      void Function(ffi.Pointer<QrmBoard>, QrmBoard)>();

  /// Place holder. Internal purpose. Do not use.
  QrmBoard QrmBoardCreateEmpty() {
    return _QrmBoardCreateEmpty();
  }

  late final _QrmBoardCreateEmptyPtr =
      _lookup<ffi.NativeFunction<QrmBoard Function()>>('QrmBoardCreateEmpty');
  late final _QrmBoardCreateEmpty =
      _QrmBoardCreateEmptyPtr.asFunction<QrmBoard Function()>();

  /// To create QR board, refer `QRMatrixEncoder`.
  /// This constructor is for internal purpose.
  QrmBoard QrmBoardCreate(
    ffi.Pointer<UnsignedByte> data,
    ffi.Pointer<UnsignedByte> errorCorrection,
    QrmSymbolInfo ecInfo,
    int maskId,
    bool isMicro,
  ) {
    return _QrmBoardCreate(
      data,
      errorCorrection,
      ecInfo,
      maskId,
      isMicro,
    );
  }

  late final _QrmBoardCreatePtr = _lookup<
      ffi.NativeFunction<
          QrmBoard Function(
              ffi.Pointer<UnsignedByte>,
              ffi.Pointer<UnsignedByte>,
              QrmSymbolInfo,
              UnsignedByte,
              ffi.Bool)>>('QrmBoardCreate');
  late final _QrmBoardCreate = _QrmBoardCreatePtr.asFunction<
      QrmBoard Function(ffi.Pointer<UnsignedByte>, ffi.Pointer<UnsignedByte>,
          QrmSymbolInfo, int, bool)>();

  void QrmBoardPrintDescription(
    QrmBoard board,
    bool isTypeVisible,
  ) {
    return _QrmBoardPrintDescription(
      board,
      isTypeVisible,
    );
  }

  late final _QrmBoardPrintDescriptionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(QrmBoard, ffi.Bool)>>(
          'QrmBoardPrintDescription');
  late final _QrmBoardPrintDescription =
      _QrmBoardPrintDescriptionPtr.asFunction<void Function(QrmBoard, bool)>();

  /// Destructor
  void QrmSegDestroy(
    ffi.Pointer<QrmSegment> segment,
  ) {
    return _QrmSegDestroy(
      segment,
    );
  }

  late final _QrmSegDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<QrmSegment>)>>(
          'QrmSegDestroy');
  late final _QrmSegDestroy =
      _QrmSegDestroyPtr.asFunction<void Function(ffi.Pointer<QrmSegment>)>();

  /// Create QR segment
  QrmSegment QrmSegCreate(
    int mode,
    ffi.Pointer<UnsignedByte> data,
    int length,
    int eciIndicator,
  ) {
    return _QrmSegCreate(
      mode,
      data,
      length,
      eciIndicator,
    );
  }

  late final _QrmSegCreatePtr = _lookup<
      ffi.NativeFunction<
          QrmSegment Function(ffi.Int32, ffi.Pointer<UnsignedByte>,
              ffi.UnsignedInt, ffi.UnsignedInt)>>('QrmSegCreate');
  late final _QrmSegCreate = _QrmSegCreatePtr.asFunction<
      QrmSegment Function(int, ffi.Pointer<UnsignedByte>, int, int)>();

  /// Create empty and set later
  QrmSegment QrmSegCreateEmpty() {
    return _QrmSegCreateEmpty();
  }

  late final _QrmSegCreateEmptyPtr =
      _lookup<ffi.NativeFunction<QrmSegment Function()>>('QrmSegCreateEmpty');
  late final _QrmSegCreateEmpty =
      _QrmSegCreateEmptyPtr.asFunction<QrmSegment Function()>();

  /// Fill segment with given data
  void QrmSegFill(
    ffi.Pointer<QrmSegment> segment,
    int mode,
    ffi.Pointer<UnsignedByte> data,
    int length,
    int eciIndicator,
  ) {
    return _QrmSegFill(
      segment,
      mode,
      data,
      length,
      eciIndicator,
    );
  }

  late final _QrmSegFillPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<QrmSegment>,
              ffi.Int32,
              ffi.Pointer<UnsignedByte>,
              ffi.UnsignedInt,
              ffi.UnsignedInt)>>('QrmSegFill');
  late final _QrmSegFill = _QrmSegFillPtr.asFunction<
      void Function(
          ffi.Pointer<QrmSegment>, int, ffi.Pointer<UnsignedByte>, int, int)>();

  void QrmSegCopy(
    ffi.Pointer<QrmSegment> segment,
    QrmSegment other,
  ) {
    return _QrmSegCopy(
      segment,
      other,
    );
  }

  late final _QrmSegCopyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<QrmSegment>, QrmSegment)>>('QrmSegCopy');
  late final _QrmSegCopy = _QrmSegCopyPtr.asFunction<
      void Function(ffi.Pointer<QrmSegment>, QrmSegment)>();

  /// Copy constructor
  QrmSegment QrmSegDuplicate(
    QrmSegment other,
  ) {
    return _QrmSegDuplicate(
      other,
    );
  }

  late final _QrmSegDuplicatePtr =
      _lookup<ffi.NativeFunction<QrmSegment Function(QrmSegment)>>(
          'QrmSegDuplicate');
  late final _QrmSegDuplicate =
      _QrmSegDuplicatePtr.asFunction<QrmSegment Function(QrmSegment)>();

  /// Destructor
  void QrmExtraDestroy(
    ffi.Pointer<QrmExtraEncodingInfo> info,
  ) {
    return _QrmExtraDestroy(
      info,
    );
  }

  late final _QrmExtraDestroyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<QrmExtraEncodingInfo>)>>('QrmExtraDestroy');
  late final _QrmExtraDestroy = _QrmExtraDestroyPtr.asFunction<
      void Function(ffi.Pointer<QrmExtraEncodingInfo>)>();

  /// Copy constructor
  QrmExtraEncodingInfo QrmExtraDuplicate(
    QrmExtraEncodingInfo other,
  ) {
    return _QrmExtraDuplicate(
      other,
    );
  }

  late final _QrmExtraDuplicatePtr = _lookup<
          ffi
          .NativeFunction<QrmExtraEncodingInfo Function(QrmExtraEncodingInfo)>>(
      'QrmExtraDuplicate');
  late final _QrmExtraDuplicate = _QrmExtraDuplicatePtr.asFunction<
      QrmExtraEncodingInfo Function(QrmExtraEncodingInfo)>();

  /// Create none
  QrmExtraEncodingInfo QrmExtraCreateNone() {
    return _QrmExtraCreateNone();
  }

  late final _QrmExtraCreateNonePtr =
      _lookup<ffi.NativeFunction<QrmExtraEncodingInfo Function()>>(
          'QrmExtraCreateNone');
  late final _QrmExtraCreateNone =
      _QrmExtraCreateNonePtr.asFunction<QrmExtraEncodingInfo Function()>();

  /// Init for MicroQR or FCN1 First Position mode
  QrmExtraEncodingInfo QrmExtraCreate(
    int mode,
  ) {
    return _QrmExtraCreate(
      mode,
    );
  }

  late final _QrmExtraCreatePtr =
      _lookup<ffi.NativeFunction<QrmExtraEncodingInfo Function(ffi.Int32)>>(
          'QrmExtraCreate');
  late final _QrmExtraCreate =
      _QrmExtraCreatePtr.asFunction<QrmExtraEncodingInfo Function(int)>();

  /// Init for FCN1 Second Positon mode
  QrmExtraEncodingInfo QrmExtraCreateFnc1Second(
    ffi.Pointer<UnsignedByte> appId,
    int appIdLen,
  ) {
    return _QrmExtraCreateFnc1Second(
      appId,
      appIdLen,
    );
  }

  late final _QrmExtraCreateFnc1SecondPtr = _lookup<
      ffi.NativeFunction<
          QrmExtraEncodingInfo Function(ffi.Pointer<UnsignedByte>,
              UnsignedByte)>>('QrmExtraCreateFnc1Second');
  late final _QrmExtraCreateFnc1Second =
      _QrmExtraCreateFnc1SecondPtr.asFunction<
          QrmExtraEncodingInfo Function(ffi.Pointer<UnsignedByte>, int)>();

  /// Constructor
  QrmStructuredAppend QrmStrAppCreate(
    ffi.Pointer<QrmSegment> segs,
    int segCount,
    int ecLevel,
  ) {
    return _QrmStrAppCreate(
      segs,
      segCount,
      ecLevel,
    );
  }

  late final _QrmStrAppCreatePtr = _lookup<
      ffi.NativeFunction<
          QrmStructuredAppend Function(ffi.Pointer<QrmSegment>, ffi.UnsignedInt,
              ffi.Int32)>>('QrmStrAppCreate');
  late final _QrmStrAppCreate = _QrmStrAppCreatePtr.asFunction<
      QrmStructuredAppend Function(ffi.Pointer<QrmSegment>, int, int)>();

  /// Constructor
  QrmStructuredAppend QrmStrAppCreateEmpty() {
    return _QrmStrAppCreateEmpty();
  }

  late final _QrmStrAppCreateEmptyPtr =
      _lookup<ffi.NativeFunction<QrmStructuredAppend Function()>>(
          'QrmStrAppCreateEmpty');
  late final _QrmStrAppCreateEmpty =
      _QrmStrAppCreateEmptyPtr.asFunction<QrmStructuredAppend Function()>();

  /// Copy constructor
  QrmStructuredAppend QrmStrAppDuplicate(
    QrmStructuredAppend other,
  ) {
    return _QrmStrAppDuplicate(
      other,
    );
  }

  late final _QrmStrAppDuplicatePtr = _lookup<
          ffi
          .NativeFunction<QrmStructuredAppend Function(QrmStructuredAppend)>>(
      'QrmStrAppDuplicate');
  late final _QrmStrAppDuplicate = _QrmStrAppDuplicatePtr.asFunction<
      QrmStructuredAppend Function(QrmStructuredAppend)>();

  void QrmStrAppFillSegs(
    ffi.Pointer<QrmStructuredAppend> target,
    ffi.Pointer<QrmSegment> segs,
    int segCount,
  ) {
    return _QrmStrAppFillSegs(
      target,
      segs,
      segCount,
    );
  }

  late final _QrmStrAppFillSegsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<QrmStructuredAppend>,
              ffi.Pointer<QrmSegment>, ffi.UnsignedInt)>>('QrmStrAppFillSegs');
  late final _QrmStrAppFillSegs = _QrmStrAppFillSegsPtr.asFunction<
      void Function(
          ffi.Pointer<QrmStructuredAppend>, ffi.Pointer<QrmSegment>, int)>();

  void QrmStrAppFillExtraMode(
    ffi.Pointer<QrmStructuredAppend> target,
    QrmExtraEncodingInfo segs,
  ) {
    return _QrmStrAppFillExtraMode(
      target,
      segs,
    );
  }

  late final _QrmStrAppFillExtraModePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<QrmStructuredAppend>,
              QrmExtraEncodingInfo)>>('QrmStrAppFillExtraMode');
  late final _QrmStrAppFillExtraMode = _QrmStrAppFillExtraModePtr.asFunction<
      void Function(ffi.Pointer<QrmStructuredAppend>, QrmExtraEncodingInfo)>();

  /// Destructor
  void QrmStrAppDestroy(
    ffi.Pointer<QrmStructuredAppend> data,
  ) {
    return _QrmStrAppDestroy(
      data,
    );
  }

  late final _QrmStrAppDestroyPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<QrmStructuredAppend>)>>(
      'QrmStrAppDestroy');
  late final _QrmStrAppDestroy = _QrmStrAppDestroyPtr.asFunction<
      void Function(ffi.Pointer<QrmStructuredAppend>)>();

  /// Must call this first start
  void QRMatrixInit() {
    return _QRMatrixInit();
  }

  late final _QRMatrixInitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('QRMatrixInit');
  late final _QRMatrixInit = _QRMatrixInitPtr.asFunction<void Function()>();
